--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     
         <div class="section-content">
             <center>
-            <h2>Resume</h2>
+            <h2>resume</h2>
             <a href="resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
