--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="image.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="17432949939694777132635347759907.jpg.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Hemalatha</h1>
             <p>Am student</p>
         </div>
@@ -169,7 +169,7 @@
         <div class="section-content">
             <center>
             <h2>resume</h2>
-            <a href="resume (1).pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="https://github.com/mhemalatha19/digital-portfolio/blob/main/resume%20%20(1).pdf.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
